# minidjvu

./: .gitignore  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.guess  config.h  config.h.in  configure  configure.ac  configure.in  libtool  ltmain.sh  mdjvucfg.h  minidjvu.dev  minidjvu.h  minidjvu.nsi  minidjvu_0.1.orig.tar.gz.delta  minidjvu_0.2.orig.tar.gz.delta  minidjvu_0.3.orig.tar.gz.delta  minidjvu_0.33.orig.tar.gz.delta  minidjvu_0.33.orig.tar.gz.id  minidjvu_0.4.orig.tar.gz.delta  minidjvu_0.5.orig.tar.gz.delta  minidjvu_0.6.orig.tar.gz.delta  minidjvu_0.7.orig.tar.gz.delta  minidjvu_0.8.orig.tar.gz.delta  minidjvu_0.8.orig.tar.gz.id  minidjvu_0.8.svn.2010.01.15.orig.tar.gz.delta  minidjvu_0.8.svn.2010.01.15.orig.tar.gz.id  minidjvu_0.8.svn.2010.05.06+dfsg.orig.tar.gz.delta  minidjvu_0.8.svn.2010.05.06+dfsg.orig.tar.gz.id  minidjvu_0.8.svn.2010.05.06.orig.tar.gz.delta  minidjvu_0.8.svn.2010.05.06.orig.tar.gz.id  tifftodjvu.hta  tifftodjvu.html  waf  (+1 more)
config/: config.h.in
debian/: .gitignore  changelog  control  copyright  libminidjvu-dev.doc-base.decode  libminidjvu-dev.doc-base.encode  libminidjvu-dev.doc-base.tifftodjvu-help  libminidjvu-dev.docs  libminidjvu-dev.install  libminidjvu0.install  libminidjvu0t64.lintian-overrides  minidjvu.doc-base.decode  minidjvu.doc-base.encode  minidjvu.doc-base.tifftodjvu  minidjvu.doc-base.tifftodjvu-help  minidjvu.docs  minidjvu.manpages  not-installed  rules  watch
doc/: Makefile.am  decode.html  encode.html  man_page.html  minidjvu.1  tifftodjvu_help.html
doc/ru/: Makefile.am  minidjvu.1
include/: Makefile.am
include/minidjvu/: jb2.h  matcher.h  minidjvu.h
include/minidjvu/alg/: alg.h  blitsort.h  classify.h  nosubst.h  render.h  smooth.h  split.h
include/minidjvu/base/: 0porting.h  1error.h  2io.h  3graymap.h  6string.h  base.h  version.h
include/minidjvu/djvu/: djvu.h  iff.h
include/minidjvu/image-io/: bmp.h  formats.h  image-io.h  tiff.h
m4/: doorjam
minidjvu/: Makefile.am  Makefile.in  README  compress.c  compress.cpp  compress.h  version.c  version.cpp  version.h
minidjvu/alg/: README  adjust_y.c  adjust_y.h  alg.h  average.h  classify.c  classify.h  clean.c  clean.h  delegate.c  delegate.h  erosion.h  render.c  smooth.c  smooth.h  split.c
minidjvu/alg/adjust/: adjust.c  adjust.h
minidjvu/alg/adjust_y/: adjust_y.cpp  adjust_y.h
minidjvu/alg/average/: average.cpp  average.h
minidjvu/alg/blitsort/: blitsort.c  blitsort.cpp  blitsort.h
minidjvu/alg/classify/: classify.cpp  classify.h
minidjvu/alg/clean/: clean.cpp  clean.h
minidjvu/alg/delegate/: delegate.cpp  delegate.h
minidjvu/alg/erosion/: erosion.cpp  erosion.h
minidjvu/alg/jb2/: README  bmpcoder.cpp  bmpcoder.h  jb2.cpp  jb2.h  jb2coder.cpp  jb2coder.h  jb2const.h  jb2load.cpp  jb2save.cpp  proto.c  proto.cpp  zp.cpp  zp.h
minidjvu/alg/nosubst/: README  nosubst.c  nosubst.cpp  nosubst.h
minidjvu/alg/patterns/: bitmaps.cpp  bitmaps.h  common.h  cuts.c  frames.c  memory.h  no_mdjvu.h  patterns.c  patterns.cpp  patterns.h  thinning.c  thinning.cpp  thinning.h
minidjvu/alg/smooth/: README  smooth.c  smooth.cpp  smooth.h
minidjvu/alg/split/: split.c  split.cpp  split.h
minidjvu/base/: 0porting.h  1error.c  3graymap.c  4bitmap.c  4bitmap.h  5image.h  6string.c  6string.h  README  base.h
minidjvu/base/0porting/: 0porting.c  0porting.cpp  0porting.h  README
minidjvu/base/1error/: 1error.c  1error.cpp  1error.h
minidjvu/base/1io/: 1io.c  1io.h
minidjvu/base/2graymap/: 2graymap.c  2graymap.h
minidjvu/base/2io/: 2io.c  2io.cpp  2io.h  README
minidjvu/base/3bitmap/: 3bitmap.c  3bitmap.h
minidjvu/base/3graymap/: 3graymap.c  3graymap.h  README
minidjvu/base/4bitmap/: 4bitmap.c  4bitmap.cpp  4bitmap.h
minidjvu/base/4image/: 4image.c  4image.h
minidjvu/base/5image/: 5image.c  5image.cpp  5image.h  render.c
minidjvu/formats/: bmp.c  djvu.h  djvuinfo.c  djvusave.c  formats.h  pbm.h  tiff.h  tiffload.c
minidjvu/formats/bmp/: bmp.c  bmp.cpp  bmp.h
minidjvu/formats/djvu/: README  djvu.c  djvu.h  djvuinfo.cpp  djvuload.c  djvuload.cpp  djvusave.c  djvusave.cpp
minidjvu/formats/iff/: README  iff.cpp  iff.h
minidjvu/formats/pbm/: pbm.c  pbm.h
minidjvu/formats/tiff/: tiff.cpp  tiff.h  tiffload.c  tiffsave.cpp
minidjvu/jb2/: bmpcoder.cpp  bmpcoder.h  bs.cpp  bs.h  djvudir.cpp  jb2coder.cpp  jb2coder.h  jb2const.h  jb2load.cpp  jb2save.cpp  proto.c  zp.cpp  zp.h
po/: Makefile.in  Makevars  POTFILES.in  ru.po
src/: Makefile  Makefile.am  Makefile.in  README  minidjvu.c  minidjvu.cpp
src/alg/: README  adjust_y.c  average.c  blitsort.c  classify.c  clean.c  compress.c  delegate.c  erosion.c  nosubst.c  render.c  smooth.c  split.c
src/base/: 0porting.c  1error.c  2io.c  3graymap.c  4bitmap.c  5image.c  6string.c  README  mdjvucfg.h  version.c
src/djvu/: bs.cpp  bs.h  djvudir.cpp  djvuinfo.c  djvuload.c  djvusave.c  iff.c
src/image-io/: bmp.c  pbm.c  tiff.c  tiffload.c  tiffsave.c
src/jb2/: bmpcoder.cpp  bmpcoder.h  jb2coder.cpp  jb2load.cpp  jb2save.cpp  proto.c  zp.cpp  zp.h
src/matcher/: bitmaps.c  bitmaps.h  common.h  cuts.c  frames.c  no_mdjvu.h  patterns.c
src/windows/: tifftodjvu.hta
tools/: Makefile.in  README  minidjvu.c
