nobase_include_HEADERS = minidjvu/jb2.h minidjvu/alg/classify.h		\
 minidjvu/alg/compress.h minidjvu/alg/split.h minidjvu/alg/render.h	\
 minidjvu/alg/smooth.h minidjvu/alg/alg.h minidjvu/alg/adjust_y.h	\
 minidjvu/alg/clean.h minidjvu/alg/nosubst.h minidjvu/alg/erosion.h	\
 minidjvu/alg/blitsort.h minidjvu/alg/delegate.h			\
 minidjvu/alg/average.h minidjvu/djvu/iff.h minidjvu/djvu/djvu.h	\
 minidjvu/image-io/tiff.h minidjvu/image-io/pbm.h			\
 minidjvu/image-io/image-io.h minidjvu/image-io/bmp.h			\
 minidjvu/minidjvu.h minidjvu/base/4bitmap.h minidjvu/base/1error.h	\
 minidjvu/base/3graymap.h minidjvu/base/0porting.h			\
 minidjvu/base/version.h minidjvu/base/6string.h			\
 minidjvu/base/5image.h minidjvu/base/base.h minidjvu/base/2io.h	\
 minidjvu/matcher.h
