lib_LTLIBRARIES=libminidjvu.la
libminidjvu_la_SOURCES=./alg/smooth/smooth.c ./alg/blitsort/blitsort.c ./alg/split/split.c ./alg/jb2/proto.c ./alg/jb2/zp.cpp ./alg/jb2/bmpcoder.cpp ./alg/jb2/jb2coder.cpp ./alg/jb2/jb2load.cpp ./alg/jb2/jb2save.cpp ./alg/adjust/adjust.c ./alg/classify/classify.c ./alg/patterns/patterns.c ./alg/patterns/cuts.c ./alg/patterns/frames.c ./alg/clean/clean.c ./alg/nosubst/nosubst.c ./alg/erosion/erosion.c ./formats/djvu/djvuload.c ./formats/djvu/djvusave.c ./formats/bmp/bmp.c ./formats/pbm/pbm.c ./formats/tiff/tiffsave.c ./formats/tiff/tiff.c ./formats/tiff/tiffload.c ./base/0porting/0porting.c ./base/4bitmap/4bitmap.c ./base/5image/5image.c ./base/5image/render.c ./base/1error/1error.c ./base/2io/2io.c ./base/3graymap/3graymap.c ./version.c ./compress.c
LDFLAGS=-version-info 2:0:0
INCLUDES=-I..
