lib_LTLIBRARIES=../bin/libminidjvu.la
___bin_libminidjvu_la_SOURCES=./alg/smooth/smooth.cpp ./alg/blitsort/blitsort.cpp ./alg/split/split.cpp ./alg/jb2/proto.cpp ./alg/jb2/zp.cpp ./alg/jb2/bmpcoder.cpp ./alg/jb2/jb2coder.cpp ./alg/jb2/jb2load.cpp ./alg/jb2/jb2save.cpp ./alg/classify/classify.cpp ./alg/patterns/patterns.cpp ./alg/patterns/cuts.cpp ./alg/patterns/frames.cpp ./alg/clean/clean.cpp ./alg/nosubst/nosubst.cpp ./alg/erosion/erosion.cpp ./alg/delegate/delegate.cpp ./alg/adjust_y/adjust_y.cpp ./formats/djvu/djvuload.cpp ./formats/djvu/djvusave.cpp ./formats/djvu/djvuinfo.cpp ./formats/bmp/bmp.cpp ./formats/pbm/pbm.cpp ./formats/tiff/tiffsave.cpp ./formats/tiff/tiff.cpp ./formats/tiff/tiffload.cpp ./formats/iff/iff.cpp ./base/0porting/0porting.cpp ./base/4bitmap/4bitmap.cpp ./base/5image/5image.cpp ./base/5image/render.cpp ./base/1error/1error.cpp ./base/2io/2io.cpp ./base/3graymap/3graymap.cpp ./version.cpp ./compress.cpp
LDFLAGS=-version-info 3:0:0
INCLUDES=-I..
